--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -27,6 +27,7 @@ $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
+$dark-pager-active-color: #ffa500;
 
 .bg-input {
   background: #46538667 !important;
